Add Aliyun image fallback and catalog verification